[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1.0.0"
maintainers = [
  { name="Jimmy Yuliang Lin", email="j.lin36@lancaster.ac.uk" },
]
authors = [
  { name="Jimmy Yuliang Lin", email="j.lin36@lancaster.ac.uk"},
]
description = "An algorithm for value iterations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

[project.urls]
homepage = "https://github.com/jimmylin0/value_iteration"